streamlit frontend one name

--- a/notebooks/gender-main.ipynb
+++ b/notebooks/gender-main.ipynb
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "573cd938",
+   "id": "7dae8e32",
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "fea004e8",
+   "id": "981f8ef1",
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "e679f2b5",
+   "id": "0371969d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "928e751a",
+   "id": "50d1865e",
    "metadata": {
     "scrolled": true
    },
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "1527e06d",
+   "id": "d3bc1ba8",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "d2b5cfe9",
+   "id": "14d3ca0a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "92888f58",
+   "id": "9e40ef3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,15 +1343,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62ab667",
+   "id": "17a68743",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
-   "id": "c7851a4c",
+   "execution_count": 273,
+   "id": "525897f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,7 @@
     "        df_name = data[(data[\"name\"] == name.lower()) & (data[\"region\"] == continent)].groupby(\"gender\")[\"wgt\"].sum()\n",
     "    elif name:\n",
     "        print(\"name\")\n",
-    "        df_name = data[data[\"name\"] == \"andrea\"].groupby(\"gender\")[\"wgt\"].sum()\n",
+    "        df_name = data[data[\"name\"] == name.lower()].groupby(\"gender\")[\"wgt\"].sum()\n",
     "    else:\n",
     "        print(\"no data given\")\n",
     "        \n",
@@ -1376,37 +1376,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ed11ce",
+   "id": "fb032e52",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
-   "id": "3e95b6ab",
+   "execution_count": 276,
+   "id": "0d0a8949",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "name = \"Dieter\"\n",
-    "country = \"Germany\"\n",
+    "name = \"Antoine\"\n",
+    "country = None\n",
     "continent = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
-   "id": "49722aa4",
+   "execution_count": 277,
+   "id": "59f9243d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name and country\n",
-      "Male: 100.0 %\n",
-      "Female: 0.0 %\n"
+      "name\n",
+      "Male: 99.97 %\n",
+      "Female: 0.03 %\n"
      ]
     }
    ],
@@ -1418,8 +1418,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 279,
+   "id": "a26e8092",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>alpha-2</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>wgt</th>\n",
+       "      <th>country</th>\n",
+       "      <th>region</th>\n",
+       "      <th>sub-region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>176715</th>\n",
+       "      <td>antoine</td>\n",
+       "      <td>US</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0.014022</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>Northern America</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           name alpha-2 gender       wgt                   country    region  \\\n",
+       "176715  antoine      US      F  0.014022  United States of America  Americas   \n",
+       "\n",
+       "              sub-region  \n",
+       "176715  Northern America  "
+      ]
+     },
+     "execution_count": 279,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[(data[\"name\"] == name.lower()) & (data[\"gender\"] == \"F\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "id": "dbe5d0f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "F     0.014022\n",
+       "M    40.985978\n",
+       "Name: wgt, dtype: float64"
+      ]
+     },
+     "execution_count": 280,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"name\"] == name.lower()].groupby(\"gender\")[\"wgt\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "551e7d95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 187,
-   "id": "a1333a35",
+   "id": "54a72eed",
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "7f841e6f",
+   "id": "f7ada34e",
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e6cadce",
+   "id": "b2180e9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,25 +1569,121 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74da8a92",
+   "id": "7bc15e49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[(data[\"name\"] == \"dieter\") & (data[\"region\"] == \"Europe\")].groupby(\"gender\")[\"wgt\"].sum()"
+    "data[(data[\"name\"] == \"jasemien\") & (data[\"region\"] == \"Europe\")].groupby(\"gender\")[\"wgt\"].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "id": "d06a7267",
+   "execution_count": 288,
+   "id": "a6cbac1b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>alpha-2</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>wgt</th>\n",
+       "      <th>country</th>\n",
+       "      <th>region</th>\n",
+       "      <th>sub-region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1258851</th>\n",
+       "      <td>jasmien</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Western Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1258852</th>\n",
+       "      <td>jasmien</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>Northern America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1258853</th>\n",
+       "      <td>jasmien</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1258854</th>\n",
+       "      <td>jasmien</td>\n",
+       "      <td>US</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>Northern America</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            name alpha-2 gender  wgt                   country    region  \\\n",
+       "1258851  jasmien      BE      F  1.0                   Belgium    Europe   \n",
+       "1258852  jasmien      CA      F  1.0                    Canada  Americas   \n",
+       "1258853  jasmien      IN      F  1.0                     India      Asia   \n",
+       "1258854  jasmien      US      F  1.0  United States of America  Americas   \n",
+       "\n",
+       "               sub-region  \n",
+       "1258851    Western Europe  \n",
+       "1258852  Northern America  \n",
+       "1258853     Southern Asia  \n",
+       "1258854  Northern America  "
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[(data[\"name\"] == \"jasmien\")]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "dda330e8",
+   "id": "57886482",
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1703,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "d9933722",
+   "id": "04392078",
    "metadata": {},
    "outputs": [
     {
@@ -1639,7 +1835,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "35d689a1",
+   "id": "7d466140",
    "metadata": {},
    "outputs": [
     {
@@ -1659,8 +1855,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 284,
+   "id": "a51fa59b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "male_p = False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "id": "2e4ca945",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if male_p or female_p:\n",
+    "    print(\"yes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d8787360",
+   "id": "6e2e06d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb710823",
    "metadata": {},
    "outputs": [],
    "source": []
